--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -128,25 +128,6 @@ input[type="checkbox"].ios-checkbox:checked + label:after {
   height: 100%;
   opacity: 0.8;
 }
-/* Text Icon */
-.text-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50px;
-  height: 50px;
-  border: none;
-  border-radius: 5px;
-  font-size: 24px;
-  text-align: center;
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  background-image: linear-gradient(135deg, #00FDF1, #5433ff, #E400F7);
-}
-.text-icon.blue-green {
-  background-image: linear-gradient(90deg, #22ff82, #21bdff, #5433ff);
-}
 /*--- Journal Items ---*/
 .journal-list {
   display: flex;
@@ -210,22 +191,39 @@ input[type="checkbox"].ios-checkbox:checked + label:after {
 }
 /* New Crop */
 .text-icon.new-crop {
+  display: flex;
   flex-wrap: wrap;
   width: 100%;
   height: 100%;
-  font-size: 150px;
-  line-height: 75px;
+  border: none;
   border: none !important;
   outline: none !important;
+  text-align: center;
+  background: none;
 }
 .text-icon.blue-green {
   background-image: linear-gradient(90deg, #22ff82, #21bdff, #5433ff);
 }
-.text-icon.new-crop span {
+.text-icon.new-crop span.plus {
+  display: block;
+  width: 100%;
+  font-size: 150px;
+  line-height: 125px;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(135deg, #00FDF1, #5433ff, #E400F7);
+}
+.text-icon.new-crop span.text {
+  display: block;
   width: 100%;
   font-size: 17px;
   line-height: 18px;
   margin-bottom: 20px;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(135deg, #00FDF1, #5433ff, #E400F7);
 }
 /* Modal Content */
 .modal-content {
